cambios agregamos sitio web master

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>hola mundo</title>
 </head>
 <body>
-    <p>este es mi sitio web</p>
+    <p>este es mi sitio web amigos</p>
 </body>
 </html>
